hphp/test/zend/good/ext/mbstring/tests/mb_split_error.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_split') or die("skip mb_split() is not available in this build");
?>