hphp/test/zend/bad/ext/mbstring/tests/mb_internal_encoding_error1.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_internal_encoding') or die("skip mb_internal_encoding() is not available in this build");
?> 